improve screenlocker multiscreen behavior

- pass focus to greeter under the mouse
- share keyboard events
- let through keyboard events for one hidden locker
  (mouse wakeup case)
- remove double filtering

BUG: 311188
FIXED-IN: 4.11.4
REVIEW: 113971